// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperEditionContent should match snapshot 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <DeveloperEditionContent
    desktopIsFree={true}
    developer={
      Object {
        "description": "description",
        "label": "label",
        "value": "value",
      }
    }
    handleOnConfirm={[MockFunction]}
    loading={false}
  />
  ,
</ContextProvider>
`;

exports[`DeveloperEditionContent should match snapshot where desktop is not free 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <DeveloperEditionContent
    desktopIsFree={false}
    developer={
      Object {
        "description": "description",
        "label": "label",
        "value": "value",
      }
    }
    handleOnConfirm={[MockFunction]}
    loading={false}
  />
  ,
</ContextProvider>
`;
